Fix scaling bug with headline, make view project and github buttons 100% width on small screens, slightly adjust font size of description

--- a/src/index.scss
+++ b/src/index.scss
@@ -666,11 +666,11 @@ footer {
 }
 @media only screen and (max-width: 500px) {
 	#headline {
-		transform: scale(0.8);
+		scale: 0.8;
 	}
 	section:nth-of-type(2) p {
 		text-align: left;
-		font-size: 22px;
+		font-size: 21px;
 	}
 	.information {
 		width: 95%;
@@ -686,6 +686,11 @@ footer {
 		row-gap: 20px;
 		flex-wrap: wrap;
 		margin-top: 45px;
+
+		.view-project,
+		.git-project {
+			width: 100%;
+		}
 	}
 	#footer-links a {
 		font-size: 14px;
@@ -705,13 +710,13 @@ footer {
 @media only screen and (max-width: 415px) {
 	#headline {
 		height: 410px;
-		margin-top: 90px;
 	}
 }
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 400px) {
 	#headline {
 		width: 260px;
-		margin-top: 50px;
+		margin-top: 100px;
+		scale: 0.9;
 	}
 	#links {
 		flex-direction: column;
